[project]
name = "inginx"
version = "0.3.18"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Hajek", email = "richard.m.hajek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
inginx = "inginx.inginx:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
